@@ -52,7 +52,7 @@ import org.gjt.sp.util.Log;
  * the methods in the {@link GUIUtilities} class instead.
  *
  * @author Slava Pestov
- * @version $Id: Macros.java,v 1.34 2003/05/24 01:18:27 spestov Exp $
+ * @version $Id: Macros.java,v 1.35 2003/05/29 19:52:42 spestov Exp $
  */
 public class Macros
 {
@@ -800,7 +800,7 @@ file_loop:			for(int i = 0; i < paths.length; i++)
 
 			for(int i = 0; i < buffer.getLineCount(); i++)
 			{
-				buffer.indentLine(i);
+				buffer.indentLine(i,true);
 			}
 
 			EditBus.removeFromBus(this);
